5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1692_1872.log
== TEST (2019-04-27 15:16:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input(digite x: ))
y = float(input(digite y: ))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y =! 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- ERROR:
File "XXXX", line 2
    x = float(input(digite x: ))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:17:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y =! 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- ERROR:
File "XXXX", line 14
    elif(x == 0 and y =! 0):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:17:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y != 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:17:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y != 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:17:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y != 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:17:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y != 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:18:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y != 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:18:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y != 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:18:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y != 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:18:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))
if(x > 0 and y > 0):
	print("Q1")
elif(x > 0 and y < 0):
	print("Q4")
elif(x < 0 and y < 0):
	print("Q3")
elif(x < 0 and y > 0):
	print("Q2")
elif(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y != 0):
	print("Eixo Y")
else:
	print("Eixo X")
-- EXECUTION TIME:
0.21737
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
